Fix: Fixed the Top Projects alignment for mobile devices

--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -107,8 +107,13 @@ body {
             grid-auto-rows: minmax(250px, auto);
             justify-items: center;
             justify-content: space-between;
+            align-items: center;
             gap: 3%;
-            padding: 0 1vw;
+
+            @media screen and (max-width: 500px) {
+                justify-items: center;
+                justify-content: center;
+            }
         }
         
         .GotoProjects_anchor {
